--- a/test1/web作业终.html
+++ b/test1/web作业终.html
@@ -9,7 +9,7 @@
 			padding: 0;
 		}
 		body{
-			background: url(img/bj.jpg) no-repeat center center fixed;
+			background: url(../html/img/8.jpg) no-repeat center center fixed;
 			background-size: cover;
 		}
 		ul{
@@ -81,13 +81,13 @@
 			border: 5px solid white;
 			box-sizing: border-box;
 		}
-        .pig{
-        	width: 50px;
-        	height: 50px;
+        .xiaohuli{
+        	width: 100px;
+        	height: 100px;
         	position: absolute;
         	left: 100px;
         	bottom: 100px;
-        	animation: pig 8s linear 0s infinite normal;
+        	animation: pig 10s linear 0s infinite normal;
         }
         @keyframes pig{
         	0%{
@@ -125,13 +125,15 @@
 </head>
 <body>
 	<ul>
-		<li><img src="img/1.jpg" alt=""></li>
-		<li><img src="img/2.jpg" alt=""></li>
-		<li><img src="img/3.jpg" alt=""></li>
-		<li><img src="img/4.jpg" alt=""></li>
-		<li><img src="img/5.jpg" alt=""></li>
-		<li><img src="img/6.jpg" alt=""></li>
+		<li><img src="../html/img/1.jpg" alt=""></li>
+		<li><img src="../html/img/2.jpg" alt=""></li>
+		<li><img src="../html/img/3.jpg" alt=""></li>
+		<li><img src="../html/img/4.jpg" alt=""></li>
+		<li><img src="../html/img/5.jpg" alt=""></li>
+		<li><img src="../html/img/6.jpg" alt=""></li>
 	</ul>
-	<img src="img/pig.gif" class="pig">
+	<img src="../html/img/7.jpg" class="xiaohuli">
+	<audio src="../html/img/01.mp3" autoplay controls loop
+	volume="0.1"></audio>
 </body>
 </html>
