--- a/html/21.音频标签.html
+++ b/html/21.音频标签.html
@@ -5,12 +5,12 @@
 	<title>音频标签.html</title>
 </head>
 <body>
-	<audio src="img/j1.mp3" autoplay controls loop
+	<audio src="../html/img/01.mp3" autoplay controls loop
 	volume="0.1"></audio>
 	<audio controls muted>
-		<source src="img/j1.mp3" type="audio/mp3"></source>
-		<source src="img/j1.mpeg" type="audio/mpeg"></source>
-		<source src="img/j1.ogg" type="ogg"></source>
+		<source src="../html/img/01.mp3" type="audio/mp3"></source>
+		<source src="../html/img/01.mpeg" type="audio/mpeg"></source>
+		<source src="../html/img/01.ogg" type="ogg"></source>
 	</audio>
 </body>
 </html>
