--- a/css/67.盒子的内容设置.html
+++ b/css/67.盒子的内容设置.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>67.盒的内容设置.html</title>
+	<title>67.盒子的内容设置.html</title>
 	<style>
 		.father{
 			width: 400px;
