--- a/css/76.背景的基本处理.html
+++ b/css/76.背景的基本处理.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>颜色的基本处理.html</title>
+	<title>背景的基本处理.html</title>
 	<style>
 		*{
 			margin: 0;
@@ -13,8 +13,18 @@
 			height: 500px;
 			border: 1px solid #000;
 			margin: 50px auto;
+			/*background-color: #ececec;
+			background-color: red;*/
+			/*background-color: rgb(255,200,150);*/
+			/*background-color: rgba(255,0,255,0.7);*/
+
 			/*background-image: url(../html/img/1.jpg);*/
 			background-image: url(http://www.fzlkz.com/uploads/allimg/c150905/1441442HW6220-45117.jpg);
+			background-repeat: /*no-repeat*/ none;
+			/*background-repeat: repeat-y;
+			background-repeat: repeat-x;*/
+
+
 		}
 	</style>
 </head>
