--- a/02-html/15.表单标签1.html
+++ b/02-html/15.表单标签1.html
@@ -29,7 +29,7 @@
       	</p>
       	<p>
       		<input type="button" value="点我">
-      		<input type="image" src="../../Pictures/img/1.jpg">
+      		<input type="image" src="../02-html/img/1.jpg">
                   <input type="image" src="img/3.jpg">
       		<input type="reset">
       		<input type="submit">
