--- a/03-css/111.定位流综合案例.html
+++ b/03-css/111.定位流综合案例.html
@@ -129,14 +129,14 @@
 			<li>天猫会员</li>
 			<li>品牌街</li>
 			<li>
-				电器城  <img src="../html/img/tmall.jpg" alt="">
+				电器城  <img src="../02-html/img/tmall.jpg" alt="">
 			</li>
 			<li>营业厅</li>
 			<li>魅力会</li>
 		</ul>
 	</header>
 	<div class="carousel">
-		<img src="../html/img/ad1.jpg" alt="">
+		<img src="../02-html/img/ad1.jpg" alt="">
 		<span class="leftarrow">&lt;</span>
 		<!-- 此处的&lt;是<的意思 -->
 		<span class="rightarrow">&gt;</span>
