--- a/03-css/116.过渡手风琴案例2.html
+++ b/03-css/116.过渡手风琴案例2.html
@@ -37,11 +37,11 @@
 </head>
 <body>
 	<ul>
-		<li><img src="../html/img/ad1.jpg"></li>
-		<li><img src="../html/img/ad2.jpg"></li>
-		<li><img src="../html/img/ad3.jpg"></li>
-		<li><img src="../html/img/ad4.jpg"></li>
-		<li><img src="../html/img/ad5.jpg"></li>
+		<li><img src="../02-html/img/ad1.jpg"></li>
+		<li><img src="../02-html/img/ad2.jpg"></li>
+		<li><img src="../02-html/img/ad3.jpg"></li>
+		<li><img src="../02-html/img/ad4.jpg"></li>
+		<li><img src="../02-html/img/ad5.jpg"></li>
 	</ul>
 </body>
 </html>
