--- a/03-css/137.平滑过渡页面综合练习.html
+++ b/03-css/137.平滑过渡页面综合练习.html
@@ -94,19 +94,19 @@
 			background-size: 100% 100%;
 		}
 		#home{
-			background-image: url(../html/img/home.jpg);
+			background-image: url(../02-html/img/home.jpg);
 		}
 		#service{
-			background-image: url(../html/img/service.jpg);
+			background-image: url(../02-html/img/service.jpg);
 		}
 		#about{
-			background-image: url(../html/img/about.jpg);
+			background-image: url(../02-html/img/about.jpg);
 		}
 		#team{
-			background-image: url(../html/img/team.jpg);
+			background-image: url(../02-html/img/team.jpg);
 		}
 		#contact{
-			background-image: url(../html/img/contact.jpg);
+			background-image: url(../02-html/img/contact.jpg);
 		}
 		#ctr1:checked ~ .content #home,
         #ctr2:checked ~ .content #service,
