--- a/03-css/128.动画轮播案例.html
+++ b/03-css/128.动画轮播案例.html
@@ -66,11 +66,11 @@
 <body>
 	<div>
 	     <ul>
-		     <li><img src="../html/img/1.jpg" alt=""></li>
-		     <li><img src="../html/img/2.jpg" alt=""></li>
-		     <li><img src="../html/img/3.jpg" alt=""></li>
+		     <li><img src="../02-html/img/1.jpg" alt=""></li>
+		     <li><img src="../02-html/img/2.jpg" alt=""></li>
+		     <li><img src="../02-html/img/3.jpg" alt=""></li>
 		     <!-- <li><img src="../html/img/4.jpg" alt=""></li> -->
-		     <li><img src="../html/img/1.jpg" alt=""></li>
+		     <li><img src="../02-html/img/1.jpg" alt=""></li>
 	     </ul>
 	</div>
 </body>
