--- a/03-css/121.照片墙.html
+++ b/03-css/121.照片墙.html
@@ -59,11 +59,11 @@
 </head>
 <body>
 	<ul>
-		<li><img src="../html/img/1.jpg" alt=""></li>
-		<li><img src="../html/img/2.jpg" alt=""></li>
-		<li><img src="../html/img/3.jpg" alt=""></li>
-		<li><img src="../html/img/4.jpg" alt=""></li>
-		<li><img src="../html/img/5.jpg" alt=""></li>
+		<li><img src="../02-html/img/1.jpg" alt=""></li>
+		<li><img src="../02-html/img/2.jpg" alt=""></li>
+		<li><img src="../02-html/img/3.jpg" alt=""></li>
+		<li><img src="../02-html/img/4.jpg" alt=""></li>
+		<li><img src="../02-html/img/5.jpg" alt=""></li>
 	</ul>
 </body>
 </html>
