--- a/03-css/137.平滑过渡页面综合练习.html
+++ b/03-css/137.平滑过渡页面综合练习.html
@@ -112,9 +112,8 @@
         #ctr2:checked ~ .content #service,
         #ctr3:checked ~ .content #about,
         #ctr4:checked ~ .content #team,
-        #ctr5:checked ~ .content #contact
-		{
-			animation: sport 2s linear 0s /*infinite*/ normal;
+        #ctr5:checked ~ .content #contact{
+			animation: sport 2s linear 0s  normal;
 		}
 		@keyframes sport{
 			from{
