--- a/03-css/85.王者荣耀练习.html
+++ b/03-css/85.王者荣耀练习.html
@@ -12,7 +12,7 @@
 			width: 100%;
 			/*width: 1000px;*/
 			height: 780px;
-			background-image: url(../html/img/bg_qq.jpg);
+			background-image: url(../02-html/img/wzry-lx.jpg);
 			background-repeat: no-repeat;
 			/*background-size: 100% 100%;因为等比例缩放所以当width不是100%时，会有多余的*/
 
@@ -20,7 +20,7 @@
 		.box2{
 			width: 100%;
 			height: 100%;
-			background-image: url(../html/img/bg_qq_bottom.jpg);
+			background-image: url(../02-html/img/wzry-xtblx.jpg);
 			background-repeat: no-repeat;
 			background-position: center bottom;
 		}
