--- a/03-css/101.qq注册邮箱页面.html
+++ b/03-css/101.qq注册邮箱页面.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +23,7 @@
 			width: 183px;
 			height: 62px;
 			line-height: 62px;
-			background-image: url(../html/img/qqmail_02.png);
+			background-image: url(../02-html/img/qqmail_02.png);
 			background-repeat: no-repeat;
 			float: left;
 		}
@@ -56,7 +55,7 @@
 			height: 100%;
 			/*background: aqua;*/
 			float: left;
-			background-image: url(../html/img/qqmail_06.png);
+			background-image: url(../02-html/img/qqmail_06.png);
 			background-repeat: no-repeat;
 			background-position: 0px 100px;
 		}
@@ -108,21 +107,23 @@
 		section .st .inputer{
 			width: 250px;
 			height: 30px;
-			border: 1px solid #369;
 			margin-bottom: 10px;
 			margin-left: 20px;
-			border-radius: 4px;
 		}
 		section .st .inputer input{
 			width: 240px;
 			height: 100%;
-			border: none;
+			border: 1px solid #369;
+			border-radius: 4px;
 			outline: none;
 			padding: 5px 5px 5px 5px;
 			box-sizing: border-box;
 			color: #ccc;
 			font-size: 16px; 
 			margin-left: 10px;
+		}
+		section .st .inputer input:focus{
+			border: 1px dashed #666;
 		}
 		section .st .auto{
 			margin-top: 10px;
