--- a/03-css/131.全正面的正方体.html
+++ b/03-css/131.全正面的正方体.html
@@ -76,12 +76,12 @@
 </head>
 <body>
 	<ul>
-		<li><img src="../html/img/7.jpg"></li>
-		<li><img src="../html/img/8.jpg"></li>
-		<li><img src="../html/img/9.jpg"></li>
-		<li><img src="../html/img/10.jpg"></li>
-		<li><img src="../html/img/11.jpg"></li>
-		<li><img src="../html/img/12.jpg"></li> 
+		<li><img src="../02-html/img/7.jpg"></li>
+		<li><img src="../02-html/img/8.jpg"></li>
+		<li><img src="../02-html/img/9.jpg"></li>
+		<li><img src="../02-html/img/10.jpg"></li>
+		<li><img src="../02-html/img/11.jpg"></li>
+		<li><img src="../02-html/img/12.jpg"></li> 
 	</ul>
 </body>
 </html>
