--- a/01-test1/01-10-web作业终.html
+++ b/01-test1/01-10-web作业终.html
@@ -9,7 +9,7 @@
 			padding: 0;
 		}
 		body{
-			background: url(../html/img/8.jpg) no-repeat center center fixed;
+			background: url(../02-html/img/8.jpg) no-repeat center center fixed;
 			background-size: cover;
 		}
 		ul{
@@ -125,15 +125,15 @@
 </head>
 <body>
 	<ul>
-		<li><img src="../html/img/1.jpg" alt=""></li>
-		<li><img src="../html/img/2.jpg" alt=""></li>
-		<li><img src="../html/img/3.jpg" alt=""></li>
-		<li><img src="../html/img/4.jpg" alt=""></li>
-		<li><img src="../html/img/5.jpg" alt=""></li>
-		<li><img src="../html/img/6.jpg" alt=""></li>
+		<li><img src="../02-html/img/1.jpg" alt=""></li>
+		<li><img src="../02-html/img/2.jpg" alt=""></li>
+		<li><img src="../02-html/img/3.jpg" alt=""></li>
+		<li><img src="../02-html/img/4.jpg" alt=""></li>
+		<li><img src="../02-html/img/5.jpg" alt=""></li>
+		<li><img src="../02-html/img/6.jpg" alt=""></li>
 	</ul>
-	<img src="../html/img/7.jpg" class="xiaohuli">
-	<audio src="../html/img/01.mp3" autoplay controls loop
+	<img src="../02-html/img/7.jpg" class="xiaohuli">
+	<audio src="../02-html/img/01.mp3" autoplay controls loop
 	volume="0.1"></audio>
 </body>
 </html>
